--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,11 @@ cache:
         - vendor
         - $HOME/.composer/cache
 
+before_install:
+    - sudo add-apt-repository ppa:ondrej/php -y
+    - sudo apt-get -qq update
+    - sudo apt-get install -y libsodium-dev
+
 install:
+    - printf "\n" | pecl install libsodium
     - composer install
