Update email address
EXO-2696

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "Exonet B.V.",
-            "email": "support@exonet.nl"
+            "email": "development@exonet.nl"
         }
     ],
     "require": {
