--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Encrypt and decrypt messages in a secure way.",
     "type": "library",
     "require-dev": {
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7"
+        "mockery/mockery": "^1.4",
+        "phpunit/phpunit": "^9"
     },
     "license": "MIT",
     "authors": [
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "~7.1"
+        "php": "^7.3|^8.0"
     },
     "autoload": {
         "psr-4": {
