Test should be in the future

--- a/.github/workflows/labels.yaml
+++ b/.github/workflows/labels.yaml
@@ -14,9 +14,10 @@ jobs:
     name: ♻️ Sync labels
     runs-on: ubuntu-latest
     steps:
-      - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@v2.4.0
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v2
+
       - name: 🚀 Run Label Syncer
-        uses: micnncim/action-label-syncer@v1.3.0
+        uses: micnncim/action-label-syncer@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
