--- a/.github/workflows/pr-labels.yaml
+++ b/.github/workflows/pr-labels.yaml
@@ -1,5 +1,5 @@
 ---
-name: PR Labels
+name: PR
 
 # yamllint disable-line rule:truthy
 on:
@@ -7,11 +7,11 @@ on:
     types: [opened, labeled, unlabeled, synchronize]
 
 jobs:
-  pr_labels:
-    name: Verify
+  verify_pr_labels:
+    name: 🏷 Verify Labels
     runs-on: ubuntu-latest
     steps:
-      - name: 🏷 Verify PR has a valid label
+      - name: ✅ Verify PR has a valid label
         uses: jesusvasquez333/verify-pr-label-action@v1.4.0
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
