--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,8 @@ on:
       - master
 
 jobs:
-  build-test:
+  run-tests:
+    name: 🪲 Run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -24,3 +25,21 @@ jobs:
         uses: php-actions/phpunit@v9
         with:
           configuration: phpunit.xml
+
+  check-code-style:
+    name: 💅🏻 Check code style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: 🛠 Run php-cs-fixer
+        uses: docker://oskarstark/php-cs-fixer-ga
+
+      - name: 🤖 Apply php-cs-fixer changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply php-cs-fixer changes
