--- a/.github/workflows/sync-labels.yaml
+++ b/.github/workflows/sync-labels.yaml
@@ -11,13 +11,14 @@ on:
 
 jobs:
   labels:
-    name: ♻️ Sync labels
+    name: Sync labels
     runs-on: ubuntu-latest
+
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🚀 Run Label Syncer
-        uses: micnncim/action-label-syncer@v1
+      - name: Run Label Syncer
+        uses: micnncim/action-label-syncer@v1.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
